kubernetes/manifests/generated/production/infrastructure/linkerd-viz/1-manifest/mutatingwebhookconfiguration-default-linkerd-tap-injector-webhook-config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"admissionregistration.k8s.io/v1","kind":"MutatingWebhookConfiguration","metadata":{"labels":{"app.kubernetes.io/managed-by":"pulumi","linkerd.io/extension":"viz"},"name":"linkerd-tap-injector-webhook-config"},"webhooks":[{"admissionReviewVersions":["v1","v1beta1"],"clientConfig":{"caBundle":"LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURRVENDQWltZ0F3SUJBZ0lSQU82dWU3QUliVWdVa09IUG9ycUthYW93RFFZSktvWklodmNOQVFFTEJRQXcKSnpFbE1DTUdBMVVFQXhNY2RHRndMV2x1YW1WamRHOXlMbXhwYm10bGNtUXRkbW [...]
  labels:
    app.kubernetes.io/managed-by: pulumi
    linkerd.io/extension: viz
  name: linkerd-tap-injector-webhook-config
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURRVENDQWltZ0F3SUJBZ0lSQU82dWU3QUliVWdVa09IUG9ycUthYW93RFFZSktvWklodmNOQVFFTEJRQXcKSnpFbE1DTUdBMVVFQXhNY2RHRndMV2x1YW1WamRHOXlMbXhwYm10bGNtUXRkbWw2TG5OMll6QWVGdzB5TWpBMApNekF5TWpBMk5URmFGdzB5TXpBME16QXlNakEyTlRGYU1DY3hKVEFqQmdOVkJBTVRISFJoY0MxcGJtcGxZM1J2CmNpNXNhVzVyWlhKa0xYWnBlaTV6ZG1Nd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUIKQVFDdUV6N3JpeXdDSzRHeUlLMUJYS3lUeTdjemNZOUd1Rk9RSVFYMC9SVkFvcWliZ1ZXbXZuU0NpdVlhcEhOMwpPMkhjZ0pTVFFZei [...]
    service:
      name: tap-injector
      namespace: linkerd-viz
      path: /
  failurePolicy: Ignore
  name: tap-injector.linkerd.io
  reinvocationPolicy: IfNeeded
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
  sideEffects: None
